# agent-hooks

./: Cargo.toml  LICENSE  README.md
src/: claude.rs  codex.rs  cursor.rs  detection.rs  gemini.rs  kiro.rs  lib.rs  opencode.rs  windsurf.rs
